--- a/bin/src/main/resources/application.yml
+++ b/bin/src/main/resources/application.yml
@@ -1,10 +1,6 @@
 server:
   port: 8081
-
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.krms4u.api.domain.user.vo
----
+  
 spring:
   messages:
     basename: messages
@@ -32,23 +28,15 @@ spring:
       
 ---
 spring:
+  config:
+    activate:
+      on-profile: dev
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@localhost:1521:XE
-    username: krms4u
-    password: 1234
----
-
-#spring:
-#  config:
-#    activate:
-#      on-profile: dev
-#  datasource:
-#    driver-class-name: oracle.jdbc.driver.OracleDriver
-#    url: jdbc:oracle:thin:@//localhost:${ORACLE_PORT}/XE
-#    username: ${ORACLE_USERNAME}
-#    password: ${ORACLE_PASSWORD}
-#  sql:
-#    init:
-#      mode: never
+    url: jdbc:oracle:thin:@localhost:${ORACLE_PORT}:XE
+    username: ${ORACLE_USERNAME}
+    password: ${ORACLE_PASSWORD}
+  sql:
+    init:
+      mode: never
       
