--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,33 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
+  config:
+    import: application-secret.yml
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: yun986927@gmail.com
+    password: ${spring.email.password}
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+          auth: true
 
-#mybatis:
-#  mapper-locations: classpath:mapper/*.xml
-#  type-aliases-package: com.krms4u.api.domain.user.vo
+cloud:
+  aws:
+    s3:
+      bucket: kcc-bucket
+      url: https://kcc-bucket.s3.ap-northeast-2.amazonaws.com/
+    credentials:
+      access-key: ${cloud.aws.accessKey}
+      secret-key: ${cloud.aws.secretKey}
+    region:
+      static: ap-northeast-2
+      auto: false
+    stack:
+      auto: false
 
 ---
 spring:
@@ -43,4 +66,6 @@ spring:
   sql:
     init:
       mode: never
-      
+
+
+
